# perf_event_open_test

./: CMakeLists.txt  arm_timing_example  perf_event_open_test  toolchain-arm64.cmake
arm-timer/: timing.c  timing.h
doc/: ARM-v8 L1 Cache测试.md  linux perf-open测试.md
src/: code_generator.cc  executor.cc  executor.h  ic_iallu_trigger.s  main.cpp  timing.h  utils.h
